--- a/Releases.html
+++ b/Releases.html
@@ -18,7 +18,7 @@
 
     <h2>Latest Releases</h2>
     <ul>
-        <img src="/Images/Travis.png" alt="This is a picture of travis golf lows">
+        <img src="Images/Travis.png" alt="This is a picture of travis golf lows">
         <li>
             <strong>Travis Scott x Jordan 1 Retro Low Golf</strong>
             <p>Release Date: October 13, 2023</p>
