--- a/Jordan 4.html
+++ b/Jordan 4.html
@@ -16,6 +16,8 @@
     </nav>
     
 <body>
+    <h1>Jordan 4</h1>
+     <img src="Images/Jordan 4.png" alt="This is a picture of Jordan 4">
     <footer>
         <p>&copy; 2023 Sneaker Society. All rights reserved.</p>
     </footer>
