--- a/Jordan 11.html
+++ b/Jordan 11.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordan 11</title>
     <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <nav>
         <a href="index.html">HOME</a> |
         <a href="Jordan 1.html">Jordan 1</a> |
@@ -14,10 +16,23 @@
         <a href="Releases.html">Releases</a> |
         <a href="Contact.html">Contact Us</a> 
     </nav>
-    
-<body>
+
+    <h1>Jordan 11</h1>
+    <img src="Images/Jordan 11.png" alt="This is a picture of Jordan 11">
+
+    <h2>The Basics</h2>
+    <p>The Air Jordan XI made its world debut on May 7, 1995 when Michael Jordan wore the “Concord” colorway for Game 1 of the Eastern Conference Finals versus the Orlando Magic. The shoe caught attention right from the beginning, thanks to the glossy patent leather upper that was unlike anything seen on court up to that point. The shoe also received media coverage after the NBA had issues with it not meeting the uniform guidelines since its predominantly white upper didn’t match the black sneakers the rest of the Bulls were wearing for the playoffs. This only increased the buzz around the shoe, beginning its long and storied history. After the NBA took exception to the Concord colorway, for the rest of the series Michael switched to the black colorway we now know as “Space Jam”—thanks to its appearance in the beloved movie.</p>
+
+    <h2>The Tech</h2>
+    <p>Another one of Tinker’s perfect balances of performance and style, the Air Jordan XI was the first Jordan model to feature a carbon fiber midfoot support shank, a technology that would be utilized in almost every game shoe to follow (Reebok actually beat Nike to the support shank concept with their Graphlite plate in shoes like the Instapump Fury and Shaq Attaq). Up top, the shoe also introduced durable and breathable ballistic nylon mesh to basketball shoes. The XI featured a full-length encapsulated Air unit for cushioning, marking the last Jordan shoe to use standard Air after the XII would debut Zoom Air to the Jordan line a year later. Recalling an important detail of Air Jordans V and VI, clear rubber was back on the outsole in a larger dose than ever to complete the XI’s remarkable design.</p>
+    <img src="Images/Air-Jordan-11-Concord-2.png" alt="This is a picture of Jordan 11">
+
+    <h2>The Variants of the Air Jordan 11</h2>
+    <p>Along with the standard Air Jordan, the shoe also originally released in a low-top edition dubbed the Air Jordan XI Low IE with a varied patent leather-less construction. The red-headed stepchild of the Air Jordan XI, the low-top featuring elephant print (for the OG’s, only the white colorway had elephant print, but retro versions of the black/red pair also have it) and die-cut mesh paneling has always been kind of a mysterious member of the Air Jordan family. In fact, nobody can even officially confirm what IE stands for. Despite its peculiarities, the IE was actually worn on court by Michael Jordan in 1996 and has had success as a retro release throughout the years.</p>
+    <img src="Images/jordan-11-bred1.png" alt="This is a picture of Jordan 11">
+
     <footer>
         <p>&copy; 2023 Sneaker Society. All rights reserved.</p>
     </footer>
 </body>
-</head>
+</html>
