--- a/Jordan 3.html
+++ b/Jordan 3.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jordan 4</title>
+    <title>Jordan 3</title>
     <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <nav>
         <a href="index.html">HOME</a> |
         <a href="Jordan 1.html">Jordan 1</a> |
@@ -15,9 +17,23 @@
         <a href="Contact.html">Contact Us</a> 
     </nav>
     
-<body>
+    <h1>Jordan 3</h1>
+    <img src="Images/air-jordan-31.png" alt="This is a picture of Jordan 3">
+
+    <h2>The Basics</h2>
+    <p>The Air Jordan III released in 1988 and retailed for $100. Michael Jordan wore them during the 1987-88 NBA season. Unlike today’s standard barrage of colorways for every signature shoe, the Air Jordan III released in only four original colors, including White/Cement Grey (that Michael won the ‘88 Slam Dunk contest in), White/Fire Red, “True Blue”, and the most famous colorway of Black/Cement Grey.</p>
+
+    <h2>The Tech</h2>
+    <p>The most important “first” of all for the III is that it was the first Air Jordan designed by the now legendary Tinker Hatfield. As the story goes, Michael was considering leaving Nike after 1987—until he saw what Tinker whipped up for his third model. Would the Air Jordan line have continued without Mr. Hatfield?</p>
+    <p>The real killer here is the midsole. Polyurethane is still used today for insoles but rarely for midsoles. Even when being used in today’s footwear, it’s accompanied by some sort of foam which absorbs most of the impact before it reaches the PU insole. Had the cushion been more protective, I think the Air Jordan III would have made a very good performance shoe.</p>
+    <img src="Images/air-jordan-3-tinker-sketch.png" alt="This is a picture of Jordan 3 Sketch">
+
+    <h2>The Beginning of Legendary Sneaker Culture</h2>
+    <p>There can be no valid argument made that the Air Jordan III is not one of the greatest sneakers ever made. Try to find somebody that doesn’t list it in their top five favorite Air Jordan ever. Good luck! Thanks to Tinker’s once radical but now timeless design, the Air Jordan III is a bona fide elephant-printed masterpiece, and a shoe that will forever be among our culture’s very best. Michael Jordan also carried the culture all the way with his astounding NBA performances in them.</p>
+    <img src="Images/Air-Jordan-3-fire-red-official-images-6.png" alt="This is a picture of Jordan 3">
+
     <footer>
         <p>&copy; 2023 Sneaker Society. All rights reserved.</p>
     </footer>
 </body>
-</head>
+</html>
