--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="logo">
+            <!-- Your logo content goes here -->
+        </div>
+    </header>
+
     <nav>
         <a href="index.html">HOME</a> |
         <a href="Jordan 1.html">Jordan 1</a> |
@@ -14,20 +22,13 @@
         <a href="Releases.html">Releases</a> |
         <a href="Contact.html">Contact Us</a> 
     </nav>
-</head>
-<body>
-    <header>
-        <div class="logo">
-        
-        </div>
-        
-    </header>
+
     <section id="about">
         <h2>About Us</h2>
         <p>
             At Sneaker Society, we're more than just a blog; we're a passionate community of sneaker enthusiasts who eat, sleep, and breathe sneakers. Our mission is simple: to share our love for sneakers by giving you a brief history of some of the most popular sneakers and keeping you in the loop about the latest trends, releases, and everything else that makes the sneaker world fascinating.
         </p>
-        <p>Sneakers have been rapidly <strong><em>EVOLVING</em></strong> over time and we have made it our misssion to keep you updated with the changes.</p>
+        <p>Sneakers have been rapidly <strong><em>EVOLVING</em></strong> over time, and we have made it our mission to keep you updated with the changes.</p>
 
         <video id="Video" controls="controls" width="500" autoplay>
             <source src="Images/Evolution of Sneakers.mp4" type="video/mp4"  alt="Evolution of Sneakers"/>
@@ -83,7 +84,7 @@
             Got questions or suggestions? Feel free to reach out to us through our <a href="Contact.html">Contact Us</a> page.
         </p>
     </section>
-<br><br>
+
     <footer>
         <p>&copy; 2023 Sneaker Society. All rights reserved.</p>
     </footer>
