--- a/Jordan 4.html
+++ b/Jordan 4.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jordan 4</title>
     <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <nav>
         <a href="index.html">HOME</a> |
         <a href="Jordan 1.html">Jordan 1</a> |
@@ -15,15 +17,22 @@
         <a href="Contact.html">Contact Us</a> 
     </nav>
     
-<body>
     <h1>Jordan 4</h1>
-        <img src="Images/Jordan 4.png" alt="This is a picture of Jordan 4">
+    <img src="Images/Jordan 4.png" alt="This is a picture of Jordan 4">
+
     <h2>The Basics</h2>
     <p>The Air Jordan IV released in 1989 and was produced in four colorways throughout the year. Basically following the same colorway schemes as the Air Jordan III, the IV released in two white-based Bulls colorways (White/Cement and “Fire Red), one black-based colorway (Black/Red), and a white and blue accented version (Military Blue). It retailed for $100, making it one of the most expensive basketball shoes on the market at the time. But it was worth it, right?</p>
+
     <h2>The Tech</h2>
     <p>The Air Jordan IV may not have introduced any groundbreaking new technology to the basketball shoe world like many other Air Jordans, but everything it did have was functional and aesthetically pleasing. Already mentioned above, the IV brought back the mid-top height and visible Air, while other tech aspects of the shoe included additional Air in the forefoot, the supportive “wings”, a lacing system which provided multiple eyelets for custom lace placement, and the large heel pull tab for easy access. The “Bred” colorway also introduced soft nubuck leather to Air Jordans, a material that would be used on many following models.</p>
+    <img src="Images/JORDAN $4.png" alt="This is a picture of Jordan 4">
+
+    <h2>The Beginning of the Air Jordan Retro Craze</h2>
+    <p>Ten years after its initial release, the Air Jordan IV returned as a retro in 1999 in its most beloved “Bred” and “White/Cement” colorways. (Something today’s Air Jordan shoppers certainly aren’t familiar with, the original ‘99 retros cost the same as the OG release at $100!) Along with the OG looks, the shoe also released in the first-ever Retro+ colorways of the Air Jordan line in the “Oreo” and “Columbia Blue” colorways with a White/Chrome version later in 2000—each constructed in full leather builds without mesh netting and Jumpmans replacing the heel Nike Air logo. The earliest Air Jordan retros in 1994, the Air Jordan 1, 2, and 3, had all been a little too soon for the sneaker world, with many pairs hitting sale racks. But we were all ready for the Air Jordan 4’s comeback in 1999, as the retro craze would officially begin from that point on.</p>
+    <img src="Images/Bred Jordan.png" alt="This is a picture of Jordan 4">
+
     <footer>
         <p>&copy; 2023 Sneaker Society. All rights reserved.</p>
     </footer>
 </body>
-</head>
+</html>
